[package]
name = "tracing-service"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.21"
futures-sink = "0.3.21"
futures-util = "0.3.21"
pin-project-lite = "0.2.9"
tokio = { version = "1.19.2", features = ["sync"] }
tokio-stream = "0.1.9"
tower = { version = "0.4.12", features = ["util"] }
tracing-core = "0.1.27"
tracing-subscriber = "0.3.11"

[dev-dependencies]
hyper = { version = "0.14.19", features = ["client", "http1", "http2", "tcp"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["json"] }
